@startuml SpatialNote_ClassDiagram_Refined
!theme plain
skinparam backgroundColor white
hide circle

' --- CORE PACKAGE (@spatial-notes/core) ---
package "@spatial-notes/core" {
    package "Domain" {
        abstract class Node <<Entity>> {
            + id: string
            + parentId: string | null
            + name: string
            + type: NodeType
            + encryptionStrategy: EncryptionStrategy
            + rename(newName: string)
            + move(newParent: string | null)
            + delete()
            + accept(visitor: CanvasElementVisitor)
        }
        class Chapter extends Node {
            - children: Node[]
            + addChild(node: Node)
        }
        class Notebook extends Node {
            - elements: CanvasElement[]
            + addElement(element: CanvasElement)
        }
        abstract class CanvasElement extends Node {
            + zIndex: number
            + metadata: any
        }
        class StrokeElement extends CanvasElement
        class ImageElement extends CanvasElement
        class TextElement extends CanvasElement

        interface INodeRepository <<Interface>> {
            + save(node: Node)
            + findById(id: string): Node
            + findAll(userId: string): Node[]
        }
        class NodeFactory <<Factory>>
    }

    package "Application" {
        class CreateNodeUseCase
        class RegisterVaultUseCase <<UseCase>>
        class UnlockVaultUseCase <<UseCase>>
        class SyncManager <<Control>> {
            - repository: INodeRepository
            - crypto: CryptoService
            + pushUpdate(delta: Uint8Array)
            + onAck()
        }
    }

    package "Infrastructure" {
        class OPFSSqliteRepository implements INodeRepository
        class YjsNodeRepository implements INodeRepository
        class CryptoWorkerProxy
    }
}

package "Web Application (apps/web)" {
    class VaultStore <<UI State>>
    class NoteStore <<UI State>>
    class NoteViewShell <<UI>>
}

' Relationships
Chapter "1" *-- "0..*" Node : contains
Notebook "1" *-- "0..*" CanvasElement : contains
SyncManager --> INodeRepository
SyncManager --> CryptoWorkerProxy
VaultStore ..> RegisterVaultUseCase : uses
VaultStore ..> UnlockVaultUseCase : uses

@enduml
